tests/errors/bundle.fil
import "primitives/core.fil";

comp ShiftReg[#W, #N]<G: 1>(
    @interface[G] go: 1,
    @[G, G+1] input: #W
) -> (
    @[G+#N, G+#N+1] out: #W
) {
    bundle f[#N]: for<#i> @[G+#i, G+#i+1] #W;
    f{1} = input;
    for #i in 0..#N {
        d := new Delay[#W]<G+#i>(f{#i});
        f{#i} = d.out;
    }
    out = f{#N+1};
}